# bevy-roguelike

./: Cargo.toml  README.md
assets/: terrain_tileset.tsx  tilemap.json  tilemap_small.json
assets/Tilemap/: test_world.json  test_world.tmx
src/: common_components.rs  game.rs  main.rs  player.rs  player_input.rs  sprite_tools.rs  ui.rs  world.rs
