[package]
name = "bevy_roguelike"
version = "0.1.0"
authors = ["Tom Knight <bolto720@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
bevy_tilemap = "0.3.1"
bevy_megaui = "0.1.4"
bevy_egui = "0.2.0"
serde = "1.0.123"
serde_json = "1.0.62"